--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyA0RXQ2hgxCj-2ZnQt2ADIf5IlR5MAxPhc"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
