--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "react": "18.3.1",
     "react-hook-form": "^7.53.1",
     "react-native": "0.75.4",
+    "react-native-config": "^1.5.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "^1.18.2",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.2.0"
