--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.18.2",
+    "react-native-permissions": "^5.1.0",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
     "react-native-vector-icons": "^10.2.0"
