--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.75.4",
     "react-native-config": "^1.5.3",
     "react-native-dotenv": "^3.4.11",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.18.2",
     "react-native-permissions": "^5.1.0",
