--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.53.1",
     "react-native": "0.75.4",
     "react-native-config": "^1.5.3",
+    "react-native-contacts": "^8.0.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^7.1.2",
