--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.18.2",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-permissions": "^5.1.0",
     "react-native-safe-area-context": "^4.11.1",
     "react-native-screens": "^3.34.0",
@@ -37,6 +38,7 @@
     "@react-native/metro-config": "0.75.4",
     "@react-native/typescript-config": "0.75.4",
     "@types/react": "^18.2.6",
+    "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
